--- a/index.html
+++ b/index.html
@@ -11,9 +11,16 @@
             text-align: center;
             color: darkmagenta;
         }
+        h2{
+            font-family: century gothic;
+            font-weight: bold;
+            text-align: center;
+            color: Blue;
+        }
     </style>
 </head>
 <body>
- <h1>My Github pages!</h1>   
+ <h1>My Github pages!</h1> 
+ <h2>Welcome Guys!</h2>  
 </body>
 </html>
