--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             font-family: century gothic;
             font-weight: bold;
             text-align: center;
-            color: Blue;
+            color: yellow;
         }
     </style>
 </head>
